--- a/style.css
+++ b/style.css
@@ -37,6 +37,9 @@ body {
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
+  font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal;
 }
 
 iframe {
