--- a/style.css
+++ b/style.css
@@ -1,16 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
@@ -29,8 +18,8 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  min-width: 320px;
-  min-height: 100vh;
+  width: 100%;
+  /* height: 100%; */
   flex-direction: column;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -75,4 +64,14 @@ iframe {
   top: 0;
   background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
   filter: blur(40px);
+}
+
+.overlay {
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%); 
+  position: fixed;
+  z-index: 100;
+  height: 100vh;
+  width: 100vw;
+  bottom: 0px;
 }
