--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@
   color-scheme: light dark;
 }
 
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
+.unhidden {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
